# chipacabra

./: .gitignore  .gitmodules  README.md
emulators/chip8/: CMakeLists.txt
emulators/chip8/Config/: Config.h  Config.h.in
emulators/chip8/src/: chip8.cpp  display.cpp  opcode.cpp  rom.cpp  startup.cpp
emulators/chip8/src/inc/: chip8.h  display.h  opcode.h  rom.h
